Fix another query parsing exception and transient session-bound gene set passed to getTaxon()